# small-language-model-for-medical-domain

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: corpora.yaml  data.yaml  model_stage_a.yaml  sft_stage_c_v1.yaml  training_stage_a.yaml  training_stage_a_colab.yaml  training_stage_a_runpod.yaml  training_stage_b.yaml  training_stage_b_colab.yaml  training_stage_b_runpod.yaml  training_stage_b_v2_control.yaml  training_stage_b_v2_selective.yaml  training_stage_b_v2_selective_l2sp.yaml  training_stage_c_sft.yaml
docs/: data-preparation.md
notebooks/: colab_stage_a.ipynb  colab_stage_b.ipynb  colab_stage_b_v2.ipynb  colab_stage_c_sft.ipynb
scripts/: prepare_data.py  scripts.txt
tests/: test_causal_loss.py  test_cleaning_pipeline.py  test_colab_stage_b_v2_notebook.py  test_colab_stage_c_notebook.py  test_corpus_assembly.py  test_corpus_statistics.py  test_decoder_model.py  test_downloader.py  test_exact_deduplication.py  test_generation.py  test_global_exact_deduplication.py  test_jsonl.py  test_language_detector.py  test_language_pipeline.py  test_license_normalization.py  test_license_pipeline.py  test_license_policy.py  test_minhash_deduplication.py  test_model_config.py  test_ncbi_downloader.py  test_phase_assembly.py  test_pipeline_inventory.py  test_quality_metrics.py  test_quality_pipeline.py  test_quality_scorer.py  test_sft_preparation.py  test_sft_training.py  test_source_standardizers.py  test_stage_a_trainer.py  test_stage_b_trainer.py  test_stage_b_v2_export.py  test_stage_b_v2_inference.py  test_stage_c_archive.py  test_stage_c_export.py  (+31 more)
(+179 files in other folders)
